plugins {
    id 'com.android.application'
}

android {
    compileSdkVersion 31
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId 'com.musicplayer.socymusic'
        minSdkVersion 24
        targetSdkVersion 31
        versionCode 9
        versionName "v1.2.1-beta"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        javaCompileOptions {
            annotationProcessorOptions {
                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation "commons-io:commons-io:2.10.0"
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation 'com.karumi:dexter:6.2.2'
    implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
    implementation 'androidx.media:media:1.4.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.fragment:fragment-ktx:1.3.6'
    implementation 'androidx.fragment:fragment:1.3.6'
    implementation 'com.github.woxthebox:draglistview:1.7.2'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'com.github.hendrawd:StorageUtil:1.0.0'
    implementation 'com.github.sephiroth74:Tri-State-Checkbox:1.0.0'
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    implementation 'org.json:json:20180813'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'

    def room_version = "2.3.0"

    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
    // optional - RxJava2 support for Room
    implementation "androidx.room:room-rxjava2:$room_version"
    // optional - RxJava3 support for Room
    implementation "androidx.room:room-rxjava3:$room_version"
    // optional - Guava support for Room, including Optional and ListenableFuture
    implementation "androidx.room:room-guava:$room_version"
    // optional - Test helpers
    testImplementation "androidx.room:room-testing:$room_version"
    // optional - Paging 3 Integration
    implementation "androidx.room:room-paging:2.4.0-alpha04"

}
